# dev-recall

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dev_recall/: main.py
dev_recall/recall/: log.py  query.py  style.css  tui.py
dev_recall/scripts/: setup_ollama.py
dev_recall/shell/: zsh_logger.sh
